--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,12 @@ on:
   pull_request:
     branches: [ master ]
 
+env:
+  GITHUB_DOCKER_REGISTRY: docker.pkg.github.com
+  REPOSITORY_NAME: Sidaty
+  PROJECT_NAME: test-github-actions
+  PACKAGE_NAME: test-github-actions
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -20,14 +26,31 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
+    - name: Checkout source code
+      uses: actions/checkout@v2
+    
+    - name: Clean and install docker
+      run: sudo mvn clean package
 
     # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: echo Hello, world!
-
-    # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
+    - name: Install Docker
       run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+        sudo apt install apt-transport-https ca-certificates curl gnupg-agent software-properties-common
+        curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -         
+        sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"         
+        sudo apt update         
+        sudo apt install docker-ce         
+        sudo apt-mark hold docker-ce         
+        sudo systemctl status docker         
+        sudo usermod -aG docker $USER
+    
+    
+    - name: Docker build
+      run: |
+        docker build -t $GITHUB_DOCKER_REGISTRY/$REPOSITORY_NAME/$PROJECT_NAME/PACKAGE_NAME .     
+    - name: Docker login
+      run: |
+        docker login docker.pkg.github.com -u ${{secrets.USER_NAME}} -p ${{secrets.GITHUB_TOKEN}}     
+    - name: Docker push       
+      run: |         
+        docker push $GITHUB_DOCKER_REGISTRY/$REPOSITORY_NAME/$PROJECT_NAME/PACKAGE_NAME
