--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,4 +53,4 @@ jobs:
         docker login docker.pkg.github.com -u ${{secrets.USER_NAME}} -p ${{secrets.GITHUB_TOKEN}}     
     - name: Docker push       
       run: |         
-        docker push $GITHUB_DOCKER_REGISTRY/$REPOSITORY_NAME/$PROJECT_NAME/PACKAGE_NAME
+        docker push $GITHUB_DOCKER_REGISTRY/$REPOSITORY_NAME/$PROJECT_NAME/$PACKAGE_NAME
