--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,15 +34,7 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Install Docker
-      run: |
-        sudo apt install apt-transport-https ca-certificates curl gnupg-agent software-properties-common
-        curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -         
-        sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"         
-        sudo apt update         
-        sudo apt install docker-ce         
-        sudo apt-mark hold docker-ce         
-        sudo systemctl status docker         
-        sudo usermod -aG docker $USER
+      uses: docker-practice/actions-setup-docker@0.0.1
     
     
     - name: Docker build
